linting, code cleanup, minor bug and performance fixes

--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
         "dev": "vite",
         "build:wasm": "wasm-pack build ./hexlife-wasm --target web --out-dir src/core/wasm-engine --out-name hexlife_wasm",
         "build": "npm run build:wasm && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint . --ext .js",
+        "lint:fix": "eslint . --ext .js --fix"
     },
     "devDependencies": {
+        "@eslint/js": "^9.30.0",
+        "eslint": "^9.30.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-import-resolver-vite": "^2.1.0",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-prettier": "^5.5.1",
+        "eslint-plugin-unused-imports": "^4.1.4",
+        "globals": "^16.2.0",
+        "prettier": "^3.6.2",
         "vite": "^6.3.5",
         "wasm-pack": "^0.0.0"
     }
